--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: static
     buildCommand: npm run build
     startCommand: npm run start
-    staticPublishPath: /path/to/build
+    staticPublishPath: /build
     routes:
       - src: /(*)
         dest: /index.html
